--- a/app/src/main/res/layout/activity_userdetails.xml
+++ b/app/src/main/res/layout/activity_userdetails.xml
@@ -79,6 +79,33 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/icnumberLayout"
+        style="@style/LoginTextInputOuterFieldStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="24dp"
+        app:boxStrokeColor="@color/black"
+        app:hintTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ageLayout"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/icNumberET"
+            style="@style/LoginTextInputInnerFieldStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="IC Number"
+            android:focusable="false"
+            android:clickable="true"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -88,7 +115,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/ageLayout">
+        app:layout_constraintTop_toBottomOf="@id/icnumberLayout">
         <TextView
             android:id="@+id/header"
             android:layout_width="wrap_content"
