--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,12 +4,12 @@
     <item
         android:title="Home"
         android:id="@+id/home"
-        android:icon="@drawable/baseline_home_24"
+        android:icon="@drawable/nav_item_home"
         />
     <item
         android:title="Profile"
         android:id="@+id/profile"
-        android:icon="@drawable/baseline_person_24"
+        android:icon="@drawable/nav_item_person"
         />
     <item
         android:title="Settings"
