--- a/app/src/main/res/layout/activity_userdetails.xml
+++ b/app/src/main/res/layout/activity_userdetails.xml
@@ -51,9 +51,8 @@
             android:hint="Type your last name"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ageLayout"
+        android:id="@+id/icnumberLayout"
         style="@style/LoginTextInputOuterFieldStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -68,33 +67,6 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ageET"
-            style="@style/LoginTextInputInnerFieldStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Select your date of birth"
-            android:focusable="false"
-            android:clickable="true"
-        />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/icnumberLayout"
-        style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ageLayout"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/icNumberET"
             style="@style/LoginTextInputInnerFieldStyle"
             android:layout_width="match_parent"
@@ -106,6 +78,35 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ageLayout"
+        style="@style/LoginTextInputOuterFieldStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="24dp"
+        app:boxStrokeColor="@color/black"
+        app:hintTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/icnumberLayout"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ageET"
+            style="@style/LoginTextInputInnerFieldStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Select your date of birth"
+            android:focusable="false"
+            android:clickable="true"
+        />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -115,7 +116,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/icnumberLayout">
+        app:layout_constraintTop_toBottomOf="@id/ageLayout">
         <TextView
             android:id="@+id/header"
             android:layout_width="wrap_content"
