--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -12,8 +12,8 @@
         android:icon="@drawable/nav_item_person"
         />
     <item
-        android:title="Settings"
-        android:id="@+id/settings"
+        android:title="Others"
+        android:id="@+id/others"
         android:icon="@drawable/baseline_settings_24"
         />
 </menu>
