--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -1,4 +1,9 @@
-<!-- booking_layout.xml -->
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -20,11 +25,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dr. John Doe"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginHorizontal="16dp"/>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bookingAppointmentLayout"
+        style="@style/LoginTextInputOuterFieldStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="24dp"
+        app:boxStrokeColor="@color/black"
+        app:hintTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/doctorNameTextView"
+        >
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/bookingAppointmentET"
+            style="@style/LoginTextInputInnerFieldStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Select appointment Date"
+            android:focusable="false"
+            android:clickable="true"
+            />
 
-
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <Button
@@ -35,4 +64,7 @@
         android:layout_marginTop="16dp"
         android:text="Book Appointment" />
 
+
 </LinearLayout>
+<include layout="@layout/activity_footer" />
+</androidx.constraintlayout.widget.ConstraintLayout>
