--- a/app/src/main/res/layout/activity_doctorhome.xml
+++ b/app/src/main/res/layout/activity_doctorhome.xml
@@ -16,6 +16,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/viewAppointment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="300dp"
+        android:text="View Appointment!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userEmail"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <Button
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
