--- a/app/src/main/res/layout/activity_userdetails.xml
+++ b/app/src/main/res/layout/activity_userdetails.xml
@@ -128,7 +128,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="Male" />
+            android:text="Male"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radio_female"
