--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -12,12 +12,12 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="64dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_logo_dev_24"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailLayout"
@@ -87,7 +87,7 @@
         android:layout_marginTop="28dp"
         android:background="@color/teal_200"
         android:text="@string/sign_in"
-        android:textColor="#0D47A1"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
